--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <meta property="og:url" content="" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="" />
-    <meta property="og:description" content="" />
+    <!-- <meta property="og:description" content="" /> -->
     <meta property="og:image" content="" />
     <meta name="description" content="" />
     <meta name="robots" content="INDEX,FOLLOW" />
@@ -29,13 +29,9 @@
   </head>
   <body class="mat-typography">
     <div id="fb-root"></div>
-    <script>(function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
-    fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v20.0"
+      nonce="qh5tPRUt">
+      </script>
     <app-root></app-root>
   </body>
 </html>
